# mcp_k8s_server

./: .gitignore  .pypirc  Dockerfile  README.md  config.yaml  deploy.sh  deploy_work.sh  docker-run.sh  env.sh  pyproject.toml  pyproject.toml.backup  requirements.txt  setup.cfg  setup.py  test_server.py
config/: __init__.py  config.yaml  pod_deployment_config.yaml  test_config_no_ssl_no_hostname.yaml  test_config_no_ssl_verify.yaml  test_config_no_ssl_with_hostname.yaml
docs/: README.md  __init__.py  api-reference.md  architecture.md  architecture.puml  class_diagram.puml  client-authentication.md  component_diagram.puml  data_flow_diagram.puml  deployment-guide.md  render_diagrams.sh  sequence_diagram.puml  serviceaccount-token-generation.md  system_overview.md  testing-guide.md  user-chat-examples.md
k8s/: __init__.py  configmap.yaml  deployment.yaml  rbac.yaml  service.yaml
mcp_k8s_server/: __init__.py  config.py  main.py  server.py
mcp_k8s_server/k8s/: __init__.py  client.py  monitoring.py  operations.py
mcp_k8s_server/prompts/: __init__.py  analysis_prompts.py
mcp_k8s_server/resources/: __init__.py  cluster_resources.py
mcp_k8s_server/tools/: __init__.py  monitoring_tools.py  operation_tools.py  resource_tools.py
src/: __init__.py  server.py  tcp_server.py
src/k8s/: __init__.py  api_client.py  kubectl.py
src/resources/: __init__.py  base.py  deployments.py  nodes.py
src/tools/: __init__.py  monitoring.py  operations.py  status.py
src/utils/: __init__.py  config.py
tests/: README.md  __init__.py  add_code_headers.py  run_all_tests.py  run_operation_tests.py  run_tests.py  test_cluster_resources.py  test_k8s_connection.py  test_k8s_direct.py  test_mcp_server.py  test_resource_tools.py  test_ssl_verify.py  test_with_config.py
