[project]
name = "mcp-k8s-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kubernetes==29.0.0",
    "modelcontextprotocol==0.1.0",
    "prometheus-client==0.17.1",
    "pyyaml==6.0.2",
    "rich==13.8.1",
    "tabulate==0.9.0",
]
