[project]
name = "mcp-k8s-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "debugpy>=1.8.13",
    "kubernetes==29.0.0",
    "mcp>=1.6.0",
    "modelcontextprotocol==0.1.0",
    "pip>=25.0.1",
    "prometheus-client==0.17.1",
    "pyyaml==6.0.2",
    "rich==13.8.1",
    "setuptools>=78.1.0",
    "tabulate==0.9.0",
]
