[metadata]
name = mcp-k8s-server
version = 0.1.0
description = Kubernetes management MCP server
long_description = file: README.md
long_description_content_type = text/markdown
author = MCP K8s Server Team
author_email = example@example.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.13
install_requires =
    mcp>=1.6.0
    kubernetes>=30.0.0
    pyyaml>=6.0.1
    httpx>=0.28.1
    click>=8.1.8
    pydantic>=2.11.1
    pydantic-settings>=2.8.1
    pip>=25.0.1

[options.packages.find]
include = mcp_k8s_server*
exclude =
    k8s*
    config*
    docs*

[options.entry_points]
console_scripts =
    mcp-k8s-server = mcp_k8s_server.main:main

[options.package_data]
* = *.yaml, *.md
